--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -7,7 +7,7 @@
 extra_configs =
     ; Uncomment or edit the lines to show more User Setups in the PIO sidebar
     ; user_setups/darwin/*.ini
-    ; user_setups/esp32/*.ini
+    user_setups/esp32/*.ini
     ; user_setups/esp32s2/*.ini
     ; user_setups/esp32s3/*.ini
     ; user_setups/linux/*.ini
@@ -18,7 +18,7 @@ extra_configs =
 ; -- Hasp config options --------------------------------------
 build_flags =
 ; -- Uncomment the next line to use the file include/user_config_override.h settings
-;    -DUSE_CONFIG_OVERRIDE
+    -DUSE_CONFIG_OVERRIDE
 
 ;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
@@ -52,7 +52,7 @@ extra_default_envs =
     ; huzzah32-featherwing-35
     ; huzzah32-featherwing-35-v2
     ; huzzah32-v2-featherwing-35-v2
-    ; huzzah32-v2-featherwing-35
+    huzzah32-v2-featherwing-35
     ; lanbon_l8
     ; lanbon_l8_eth
     ; lilygo-lily-pi_ili9481
