--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -19,6 +19,7 @@ extra_configs =
 build_flags =
 ; -- Uncomment the next line to use the file include/user_config_override.h settings
     -DUSE_CONFIG_OVERRIDE
+    -DARDUINO
 
 
 ;region -- Default Build Environments : Used when Build All ---
