--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -146,7 +146,7 @@ framework = arduino
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
 ;;;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.11.01/platform-espressif32.zip
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
-platform = espressif32@5.4.0
+platform = https://github.com/platformio/platform-espressif32.git
 lib_ignore =
     ${esp32.lib_ignore}
     LittleFS_esp32    ; Not needed for Arduino v2
