--- a/user_setups/esp32s3/lanbon_l9.ini
+++ b/user_setups/esp32s3/lanbon_l9.ini
@@ -12,6 +12,7 @@ build_flags =
     ${esp32s3.build_flags}
     ${esp32s3.ps_ram}
     -D HASP_MODEL="Lanbon L9"
+    -D LANBONL9
     ;-D ARDUINO_USB_MODE=0
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
