--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -171,16 +171,18 @@ build_flags =
     -D TFT_WIDTH=800
     -D TFT_HEIGHT=480
     ; Panel Settings
+    ; see see https://github.com/wegi1/ESP32-8048S050-5INCH-LCD/blob/main/4-Driver_IC_Data_Sheet/JC8048B050N_I.pdf
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=48   ; Maximum HSYNC Front Porch
+    -D TFT_HSYNC_FRONT_PORCH=8    ; Maximum HSYNC Front Porch
     -D TFT_HSYNC_PULSE_WIDTH=4    ; Typical HSYNC Pulse Width
     -D TFT_HSYNC_BACK_PORCH=8     ; Typical HSYNC Back Porch
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=12   ; Maximum VSYNC Front Porch
+    -D TFT_VSYNC_FRONT_PORCH=8    ; Maximum VSYNC Front Porch
     -D TFT_VSYNC_PULSE_WIDTH=4    ; Typical VSYNC Pulse Width
     -D TFT_VSYNC_BACK_PORCH=8     ; Typical VSYNC Back Porch
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=13900000  ; 1/2 of Typical DCLK Frequency
+    ; 13900000 fails on some boards, high values cause wifi issues
+    -D TFT_PREFER_SPEED=14500000  ; 1/2 of Typical DCLK Frequency
     -D TFT_AUTO_FLUSH=1
     ; Touch Settings
     -D TOUCH_WIDTH=800
