--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -82,6 +82,8 @@ extra_default_envs =
     ; yeacreate-nscreen32
     ; wz2432r028
     ; ws_esp32_s3_touch_lcd_4p3
+    ; ttgo-t-display-s3_st7789_16MB
+    ; ttgo-t-display-s3_st7789_touch_16MB
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
