--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,8 +14,8 @@ on:
 
 jobs:
   build_esp32:
-    #runs-on: ubuntu-latest
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+    #runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
