chore: update header description for guition-jc8048w550n

--- a/user_setups/esp32s3/guition-jc8048w550n.ini
+++ b/user_setups/esp32s3/guition-jc8048w550n.ini
@@ -1,8 +1,8 @@
 ;***************************************************;
-;    Sunton ESP32-S3 TFT 4.3", 5.0", 7.0"           ;
+;    Guition ESP32-S3 TFT 5.0"                      ;
 ;          - Custom esp32-s3 board                  ;
-;          - ili6485 480x272 or st7262 IPS 800x480  ;
-;          - xpt2046 or gt911 touch controller      ;
+;          - iST7262 IPS 800x480                    ;
+;          - gt911 touch controller                 ;
 ;***************************************************;
 
 [guition-jc8048w550n-tft]
@@ -13,7 +13,7 @@ board_build.arduino.memory_type = qio_opi
 build_flags =
     ${arduino_esp32s3_v2.build_flags}
     ${esp32s3.ps_ram}
-    ; -D HASP_MODEL="Sunton 4.3\""
+    ; -D HASP_MODEL="Guition 5.0\""
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
 
