change to correct names and fix some driver config issues

--- a/user_setups/esp32s3/4dsystems-gen4_esp32_50ct.ini
+++ b/user_setups/esp32s3/4dsystems-gen4_esp32_50ct.ini
@@ -1,17 +1,17 @@
 ;***************************************************;
-;    Elecrow ESP32-S3 TFT 5.0"                          ;
-;          - Wizee-ESP32 WZ8048C050                 ;
-;          - Custom esp32-s3 board                        ;
+;    4D Systems GEN4-ESP32-S3 TFT 5.0"                          ;
+;          - 4D Systems Screen 4DLCD-50800480   https://uk.rs-online.com/web/p/lcd-colour-displays/2058704?searchId=afcc888a-a7c2-4b51-8eb6-bc5aacf64fa9&gb=s                ;
+;          - Custom esp32-s3r8 board                        ;
 ;          - ILI6122/ILI5960 display driver                 ;
-;          - gt911 touch controller                             ;
+;          - FT5446 touch controller                             ;
 ;***************************************************;
 ;
-; https://www.elecrow.com/esp32-display-5-inch-hmi-display-rgb-tft-lcd-touch-screen-support-lvgl.html
+; https://4dsystems.com.au/products/gen4-esp32-series/
 ;
 
-[elecrow-esp32-s3-tft-50]
+[4dsystems-gen4_esp32_50]
 extends = arduino_esp32s3_v2
-board = esp32-s3-devkitc-1
+board = esp32-s3-devkitc-1 ; Correct board would be  4d_systems_esp32s3_gen4_r8n16  but only included from 3.x.x framework
 board_build.arduino.memory_type = qio_opi
 
 build_flags =
@@ -32,7 +32,7 @@ lib_deps =
 
 board_build.partitions = huge_app.csv
 
-[elecrow-tft-common-pins]
+[4dsystems-tft-common-pins]
 build_flags =
 
 
@@ -64,19 +64,19 @@ build_flags =
   -D TFT_HSYNC=39   ;39 /* HSYNC */,
   -D TFT_PCLK=42     ;42s /* PCLK */,
 
-[env:elecrow-s3-8048C050_8MB]
-extends = elecrow-esp32-s3-tft-50, flash_8mb
+[env:4dsystems-gen4_esp32_50ct_16MB]
+extends = 4dsystems-gen4_esp32_50, flash_16mb
 
 build_flags =
-    -D HASP_MODEL="Elecrow WZ8048C050"
+    -D HASP_MODEL="4D Systems gen4-ESP32-43CT"
     -D HASP_LOG_LEVEL=LOG_LEVEL_VERBOSE
     -D HASP_USE_CAPTIVE_PORTAL=0
   ;  -D HASP_USE_CUSTOM=1
   ;  -D MQTT_TOPIC_CUSTOM="SmartPICoop"
 
 
-    ${elecrow-esp32-s3-tft-50.build_flags}
-    ${elecrow-tft-common-pins.build_flags}
+    ${4dsystems-gen4_esp32_50.build_flags}
+    ${4dsystems-tft-common-pins.build_flags}
 
     ; Panel Settings ILI6122/LI5960
     -D TFT_WIDTH=800            ;800 /* width */,
@@ -84,11 +84,11 @@ build_flags =
 
     -D TFT_HSYNC_POLARITY=0     ;0 /* hsync_polarity */,
     -D TFT_HSYNC_FRONT_PORCH=8  ;8 /* hsync_front_porch */,
-    -D TFT_HSYNC_PULSE_WIDTH=4  ;???Pio_4 /* hsync_pulse_width */ ???Ard_1 /* hsync_pulse_width */, -1
-    -D TFT_HSYNC_BACK_PORCH=8  ;???Pio_43 /* hsync_back_porch */,???Ard_32 /* hsync_back_porch */, -32
+    -D TFT_HSYNC_PULSE_WIDTH=4  ;???Pio_4 /* hsync_pulse_width */ ???Ard_1 /* hsync_pulse_width */,
+    -D TFT_HSYNC_BACK_PORCH=8  ;???Pio_43 /* hsync_back_porch */,???Ard_32 /* hsync_back_porch */,
     -D TFT_VSYNC_POLARITY=0     ;0 /* vsync_polarity */,
     -D TFT_VSYNC_FRONT_PORCH=8  ;8 /* vsync_front_porch */,
-    -D TFT_VSYNC_PULSE_WIDTH=4  ;???Pio_4 /* vsync_pulse_width */ ???Ard_1 /* vsync_pulse_width */, -1
+    -D TFT_VSYNC_PULSE_WIDTH=4  ;???Pio_4 /* vsync_pulse_width */ ???Ard_1 /* vsync_pulse_width */,
     -D TFT_VSYNC_BACK_PORCH=8   ;Pio_12 /* vsync_back_porch */ ???Ard_ 8 /* vsync_back_porch */,
     -D TFT_PCLK_ACTIVE_NEG=1    ;1 /* pclk_active_neg */,
     -D TFT_PREFER_SPEED=16000000  ;16000000 /* prefer_speed */
@@ -109,4 +109,4 @@ build_flags =
     -D I2C_TOUCH_FREQUENCY=400000
 
 lib_deps =
-    ${elecrow-esp32-s3-tft-50.lib_deps}
+    ${4dsystems-gen4_esp32_50.lib_deps}
