--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -35,7 +35,7 @@ extra_default_envs =
     ; -- AZ-Touch ---------------------------------
         ; az-touch-mod-esp32_ili9341_4MB
         ; az-touch-mod-esp32_ili9341_8MB
-    ; -- Dustin Watts ------------------------------------
+    ; -- Dustin Watts -----------------------------
         ; esp32-touchdown
         ; freetouchdeck_4MB
         ; freetouchdeck_8MB
@@ -46,16 +46,17 @@ extra_default_envs =
         ; elecrow-s3-8048c050_4MB
         ; elecrow-s3-8048c070_4MB
         ; wz2432r028
-    ; -- Global Security ---------------------------------
+    ; -- Global Security --------------------------
         ; gs-t3e_16MB
     ; -- Guition ----------------------------------
         ; esp32-s3-4848s040_16MB
         ; guition-jc4827w543c_4MB
+        ; guition-jc8048w50n_16MB
     ; -- Lanbon -----------------------------------
         ; lanbon_l8
         ; lanbon_l8_eth
         ; lanbon_l9
-    ; -- Lilygo-TTGO ---------------------------------
+    ; -- Lilygo-TTGO ------------------------------
         ; lilygo-lily-pi_ili9481
         ; lilygo-lily-pi_st7796
         ; ttgo-t7-v1_5_ili9341_4MB
@@ -64,25 +65,25 @@ extra_default_envs =
         ; ttgo-esp32_tdisplay_v1
         ; ttgo-t-display-s3_st7789_16MB
         ; ttgo-t-display-s3_st7789_touch_16MB
-    ; -- Lolin ---------------------------------
+    ; -- Lolin ------------------------------------
         ; lolin-d32-pro_ili9341
-    ; -- M5stack ---------------------------------
+    ; -- M5stack ----------------------------------
         ; m5stack-core2
         ; m5stack-tough
-    ; -- Makerfabs ---------------------------------
+    ; -- Makerfabs --------------------------------
         ; makerfabs-tft35-cap_4MB
         ; makerfabs-tft35-cap_16MB
         ; makerfabs-tft-s2_ili9488
         ; makerfabs-s3-tft35-spi
         ; makerfabs-s3-tft40-rgb
         ; makerfabs-s3-tft43-rgb
-    ; -- Panlee ---------------------------------
+    ; -- Panlee -----------------------------------
         ; panlee-zw3d95ce01s-ar-4848_16MB
         ; panlee-zw3d95ce01s-ur-4848_16MB
         ; panlee-zw3d95ce01s-tr-4848_16MB
-    ; -- Seeed Studios ---------------------------------
+    ; -- Seeed Studios ----------------------------
         ; sensecap-indicator-d1_8MB
-    ; -- Sunton ---------------------------------
+    ; -- Sunton -----------------------------------
         ; esp32-2432s022c_4MB
         ; esp32-2432s028r_4MB
         ; esp32-2432s028r-ili9342_4MB
@@ -94,25 +95,25 @@ extra_default_envs =
         ; sunton-8048s043c_16MB
         ; sunton-8048s050c_16MB
         ; sunton-8048s070c_16MB
-    ; -- Waveshare ---------------------------------
+    ; -- Waveshare --------------------------------
         ; esp32-one_ili9486
         ; esp32-one_st7796
         ; ws_esp32_s3_touch_lcd_4p3
         ; ws_esp32_s3_touch_lcd_7p0
         ; nodemcu32s-raspi
-    ; -- Wemos ------------------------------------------
+    ; -- Wemos ------------------------------------
         ; d1-mini-esp32_ili9341
         ; d1-r32-unoshield_ili9341_adc
         ; d1-r32-unoshield_ili9486_adc
         ; d1-r32-waveshare_ili9486
         ; s2-mini-esp32s2_ili9341
-    ; -- Wireless-Tag ---------------------------------
+    ; -- Wireless-Tag -----------------------------
         ; wt32-sc01_4MB
         ; wt32-sc01_16MB
         ; wt32-sc01-plus_8MB
         ; wt32-sc01-plus_16MB
         ; wt-86-32-3zw1
-    ; -- Yeacreate ---------------------------------
+    ; -- Yeacreate --------------------------------
         ; yeacreate-nscreen32
 ;endregion
 
