--- a/platformio.ini
+++ b/platformio.ini
@@ -74,8 +74,8 @@ build_flags =
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=7
-    ;-D HASP_VER_REV=4
-    -D HASP_VER_REV=0-rc15
+    -D HASP_VER_REV=0.1
+    ;-D HASP_VER_REV=0-rc15
     ;-D HASP_VER_REV=4-rc1
     ${override.build_flags}
 
