--- a/user_setups/esp32/esp32-2432s022c.ini
+++ b/user_setups/esp32/esp32-2432s022c.ini
@@ -35,8 +35,9 @@ build_flags =
     -D TFT_BCKL=0    ; LED back-light
 
     ;CST816S driver
-    -D TOUCH_DRIVER=0x816 
-    ;-D HASP_USE_LGFX_TOUCH=1
+    ;-D TOUCH_DRIVER=0x816 
+    -D TOUCH_DRIVER=0x0820
+    -D HASP_USE_LGFX_TOUCH=1
     -D I2C_TOUCH_PORT=I2C_NUM_0
     -D TOUCH_SDA=21
     -D TOUCH_SCL=22
