Changes to ws_esp32_s3_touch

--- a/user_setups/esp32s3/ws_esp32_s3_touch_lcd_4.ini
+++ b/user_setups/esp32s3/ws_esp32_s3_touch_lcd_4.ini
@@ -8,15 +8,12 @@
 [ws_esp32_s3_touch]
 extends = arduino_esp32s3_v2, flash_8mb
 board = esp32-s3-devkitc-1
-;board = esp32-s3-devkitc-1-n16r8v
 board_build.arduino.memory_type = qio_opi
 
 build_flags =
     ${arduino_esp32s3_v2.build_flags}
     ${esp32s3.ps_ram}
-    -DARDUINO_ESP32S3_DEV,
-    -DBOARD_HAS_PSRAM,
-    -DARDUINO_USB_MODE=1,
+    ;-DARDUINO_USB_MODE=1,
     -DARDUINO_USB_CDC_ON_BOOT=1
     
 
