--- a/user_setups/esp32c3/2424S012.ini
+++ b/user_setups/esp32c3/2424S012.ini
@@ -1,10 +1,10 @@
-[env:2424S012]
+[env:cyd-2424s012]
 extends = arduino_esp32c3_v2, flash_4mb
 ; Close enough, sets it up to use USB-CDC rather than uart
 board = seeed_xiao_esp32c3 
 
 build_flags =
-    -D HASP_MODEL="ESP32-2424S012"
+    -D HASP_MODEL="CYD 2424S012"
     ${arduino_esp32c3_v2.build_flags}
     ${esp32c3.no_ps_ram}
 
@@ -33,3 +33,6 @@ build_flags =
 lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
     ${lovyangfx.lib_deps}
+
+[env:cyd-2424s012_4MB]
+extends = cyd-2424s012, flash_4mb
