--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -10,6 +10,7 @@ extra_configs =
     ; user_setups/esp32/*.ini
     ; user_setups/esp32s2/*.ini
     ; user_setups/esp32s3/*.ini
+    ; user_setups/esp32c3/*.ini
     ; user_setups/linux/*.ini
     ; user_setups/stm32f4xx/*.ini
     ; user_setups/win32/*.ini
