--- a/user_setups/esp32c3/2424S012.ini
+++ b/user_setups/esp32c3/2424S012.ini
@@ -1,5 +1,5 @@
-[env:cyd-2424s012]
-extends = arduino_esp32c3_v2, flash_4mb
+[cyd-2424s012]
+extends = arduino_esp32c3_v2
 ; Close enough, sets it up to use USB-CDC rather than uart
 board = seeed_xiao_esp32c3 
 
