Add installation of dulwich in build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,6 +88,7 @@ jobs:
       - name: Install Setuptools
         run: |
           pip install --upgrade setuptools
+          pip install --upgrade dulwich
       - name: Enable ESP32 platforms from platformio_override-template.ini
         run: |
           sed 's/; user_setups\/esp32/user_setups\/esp32/g' platformio_override-template.ini > platformio_override.ini
