--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,14 +82,16 @@ jobs:
         with:
           # python-version: "3.x"
           python-version: "3.12" # ESP32 builds are currently broken on Python 3.13
-      - name: Install PlatformIO
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade platformio
       - name: Install Setuptools
         run: |
           pip install --upgrade setuptools
           pip install --upgrade dulwich
+      - name: Install PlatformIO
+        run: |
+          pip install --upgrade platformio
       - name: Enable ESP32 platforms from platformio_override-template.ini
         run: |
           sed 's/; user_setups\/esp32/user_setups\/esp32/g' platformio_override-template.ini > platformio_override.ini
