--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -80,8 +80,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          # python-version: "3.x"
-          python-version: "3.12" # ESP32 builds are currently broken on Python 3.13
+          python-version: "3.x"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
