Add linux_headless and linux_fbdev

--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -12,6 +12,8 @@ jobs:
       matrix:
         environments:
           - linux_sdl
+          - linux_headless
+          - linux_fbdev 
 
     steps:
       - uses: actions/checkout@v4
